Further refinements and added content

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -20,8 +20,7 @@ layout: default
 
         <!-- Main Content Area -->
         <div class="content-column">
-            <div class="about-spacer"></div>
-            <div class="about-content description-box">
+            <div class="about-content">
                 {{ content }}
             </div>
         </div>
